# coterie

./: .gitlab-ci.yml  .rosinstall  CMakeLists.txt  README.md  package.xml
coterie/: CMakeLists.txt  package.xml  setup.py
coterie/cmake/: AIMMacros.cmake  FindMOSEK.cmake
coterie/include/coterie/: CartesianProductSet-inl.hpp  CartesianProductSet.hpp  CompositeSets.hpp  EllipsoidSolver.h  EllipsoidalSet.hpp  ManifoldSet.hpp  MosekEllipsoidSolver.hpp  NonparametricSets.hpp  OrientedBoundingBoxSet.hpp  PointSet.hpp  PolytopeSet.hpp  PoseSetProperties.hpp  QuaternionTraits.hpp  RandomIndexGenerator.hpp  RasterSet.hpp  Set.hpp  construction.hpp  projections.hpp  serialization.hpp  subsets.hpp
coterie/include/coterie/sampling/: RNG.h  extents.hpp  halton.hpp  uniform_sample.hpp
coterie/include/coterie/serialization/: AABB.hpp  AABBMsg.hpp  Array.hpp  Eigen.hpp  EllipsoidalSetMsg.hpp  PointMsg.hpp  PolymorphicSetMsg.hpp  PolytopeSetMsg.hpp  RasterSet.hpp  RasterSetMsg.hpp  compressed_file.hpp
coterie/include/coterie/visualization/: EllipsoidalSet.hpp  aabb_set.hpp  ellipsoidal_set.hpp  point_set.h  point_set.hpp  polytope_set.hpp
coterie/scripts/: ellipsoids.py
coterie/src/coterie/: EllipsoidSolver.cpp  ellipsoids.py  template_instantiations.cpp
coterie/src/coterie/sampling/: RNG.cpp
coterie/src/nodes/: visualize_ellipsoidal_set.cpp  visualize_polytope_set.cpp  visualize_raster_isosurface.py  visualize_raster_set.cpp  visualize_rasterset.cpp
coterie/test/unit/: test_composite_sets.cpp  test_ellipsoid_inclusion.cpp  test_ellipsoidal_set.cpp  test_file_serialization.cpp  test_obb_set.cpp  test_point_set.cpp  test_projections.cpp  test_raster_set.cpp  test_subset_relations.cpp
coterie_msgs/: CMakeLists.txt  package.xml
coterie_msgs/msg/: AABBSet.msg  EllipsoidalSet.msg  Hyperplane.msg  MultiArrayExtents.msg  PointSet.msg  PolymorphicSet.msg  PolymorphicSetVisualizationStamped.msg  PolytopeSet.msg  RasterSet.msg
coterie_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
coterie_rviz_plugin/include/coterie_rviz_plugin/: PolymorphicSetDisplay.h  PolymorphicSetVisual.h
coterie_rviz_plugin/src/coterie_rviz_plugin/: PolymorphicSetDisplay.cpp  PolymorphicSetVisual.cpp
docker/: Dockerfile  create_rosversions.sh
include/coterie/: EllipsoidalSet.hpp  PointSet.hpp  PolytopeSet.hpp  RasterSet.hpp  Set.hpp  subsets.hpp
src/coterie/: template_instantiations.cpp
test/unit/: test_ellipsoidal_set.cpp  test_point_set.cpp  test_polytope_set.cpp  test_raster_set.cpp  test_subset_relations.cpp
