<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>coterie_rviz_plugin</name>
  <version>0.0.0</version>
  <description>The coterie_rviz_plugin package</description>

  <maintainer email="arprice@gatech.edu">Andrew Price</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>coterie</depend>
  <depend>coterie_msgs</depend>
  <depend>rviz</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>


  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
